# isbir-wp-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: f13f51187a06_initial_tables.py
data/: knowledge-base.txt  prompts.json
scripts/: scrape_knowledge.py  test_db_connection.py  test_rag.py
src/aiChatbot/: __init__.py  asgi.py  main.py
src/aiChatbot/adapters/: __init__.py  whatsappAdapter.py
src/aiChatbot/api/: __init__.py  app.py
src/aiChatbot/database/: __init__.py  connection.py  models.py  repository.py
src/aiChatbot/interfaces/: __init__.py  aiService.py  channelAdapter.py  embeddingService.py  messageProcessor.py
src/aiChatbot/models/: __init__.py  botConfig.py  chatSession.py  standardMessage.py
src/aiChatbot/services/: __init__.py  businessHours.py  channelManager.py  embeddingService.py  geminiAIService.py  intentDetector.py  knowledgeBase.py  messageProcessorService.py  messageQueue.py  ragService.py  serviceFactory.py  sessionManager.py
src/aiChatbot/utils/: __init__.py  languageDetector.py  loggingConfig.py  promptManager.py
tests/: conftest.py  test_api.py  test_intentDetector.py  test_messageQueue.py
